--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --primary-color: #DE794AFF;
 }
 
 @media (prefers-color-scheme: light) {
