--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   --primary-color: #DE794AFF;
+  --main-background: #F9F6F1;
 }
 
 @media (prefers-color-scheme: light) {
